[project]
name = "compare-python-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"

dependencies = [
    "arrow==0.15.5",
    "cachetools==4.1.1",
    "ciso8601==2.1.3",
    "dacite==1.5.1",
    "fastapi==0.61.0",
    "fire==0.2.1",
    "gunicorn==20.1.0",
    "h3==3.7.0",
    "kafka-python==2.0.1",
    "lxml==4.5.0",
    "numpy==1.23.1",
    "omegaconf==1.4.1",
    "orjson==3.9.10",
    "oss2==2.9.1",
    "pandas==2.0.3",
    "pyapollos==0.1.5",
    "pymongo==3.10.1",
    "python-aqi==0.6.1",
    "python-jose==3.2.0",
    "redis==3.4.1",
    "requests==2.23.0",
    "sentry_asgi==0.2.0",
    "sentry_sdk==0.14.2",
    "sh==1.14.3",
    "six==1.14.0",
    "starlette==0.13.6",
    "statsd==3.3.0",
    "tqdm==4.48.2",
    "typing-extensions==4.4.0",
    "uvicorn==0.15.0",
    "xmltodict==0.12.0",
    "zeep==3.4.0",
    "OpenCC==1.1.6",
    "celery==5.2.3",
    "gevent==21.12.0",
    "Scrapy==2.6.1",
    "pydantic==1.9.0",
    "timezonefinder==5.2.0",
    "pyproj==3.5.0",
    "PyYAML==6.0.1",
    "retrying==1.3.3",
    "loguru==0.7.0",
    "h5py==3.11.0",
    "netCDF4==1.5.8",
    "xarray==0.20.1",
    "APScheduler==3.9.1",
    "importlib-metadata==4.13.0",
    "pyOpenSSL==22.0.0",
    "cryptography==36.0.2",
    "flask",
    "flask_apscheduler",
    "Twisted==22.10.0",
    "timeout_decorator"
]

[tool.poetry]
name = "compare-python-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.9.dev0"
arrow = "0.15.5"
cachetools = "4.1.1"
ciso8601 = "2.1.3"
dacite = "1.5.1"
fastapi = "0.61.0"
fire = "0.2.1"
gunicorn = "20.1.0"
h3 = "3.7.0"
kafka-python = "2.0.1"
lxml = "4.5.0"
numpy = "1.23.1"
omegaconf = "1.4.1"
orjson = "3.9.10"
oss2 = "2.9.1"
pandas = "2.0.3"
pyapollos = "0.1.5"
pymongo = "3.10.1"
python-aqi = "0.6.1"
python-jose = "3.2.0"
redis = "3.4.1"
requests = "2.23.0"
sentry_asgi = "0.2.0"
sentry_sdk = "0.14.2"
sh = "1.14.3"
six = "1.14.0"
starlette = "0.13.6"
statsd = "3.3.0"
tqdm = "4.48.2"
typing-extensions = "4.4.0"
uvicorn = "0.15.0"
xmltodict = "0.12.0"
zeep = "3.4.0"
OpenCC = "1.1.6"
celery = "5.2.3"
gevent = "21.12.0"
Scrapy = "2.6.1"
pydantic = "1.9.0"
timezonefinder = "5.2.0"
pyproj = "3.5.0"
PyYAML = "6.0.1"
retrying = "1.3.3"
loguru = "0.7.0"
h5py = "3.11.0"
netCDF4 = "1.5.8"
xarray = "0.20.1"
APScheduler = "3.9.1"
importlib-metadata = "4.13.0"
pyOpenSSL = "22.0.0"
cryptography = "36.0.2"
flask = "*"
flask_apscheduler = "*"
Twisted = "22.10.0"
timeout_decorator = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
